# prelegal

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md
.claude/: CLAUDE.md
backend/: auth.py  database.py  main.py  pyproject.toml
backend/routers/: auth.py  chat.py  dependencies.py  templates.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: DocumentChat.tsx  DocumentCreator.tsx  DocumentPreview.tsx  NdaChat.tsx  NdaCreator.tsx  NdaForm.tsx  NdaPreview.tsx
frontend/lib/: nda-template.ts  pdf-generator.ts  template-utils.ts
scripts/: start-mac.sh  stop-mac.sh
templates/: LICENSE.txt  catalog.json
